--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -343,6 +343,8 @@
     <ClCompile Include="GameObject\MeshObject\MeshObjectChipManager.cpp">
       <Filter>GameObject\MeshObject</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\BossGolem.cpp" />
+    <ClCompile Include="GameObject\Enemy\HFSM\GhostPairAttackState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -704,6 +706,8 @@
     <ClInclude Include="GameObject\MeshObject\MeshObjectChipManager.h">
       <Filter>GameObject\MeshObject</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject\Enemy\BossGolem.h" />
+    <ClInclude Include="GameObject\Enemy\HFSM\GhostPairAttackState.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
