--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -343,6 +343,12 @@
     <ClCompile Include="GameObject\MeshObject\MeshObjectChipManager.cpp">
       <Filter>GameObject\MeshObject</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\BossGolem.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject\Enemy\HFSM\GhostPairAttackState.cpp">
+      <Filter>GameObject\Enemy\HFSN</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -703,6 +709,12 @@
     </ClInclude>
     <ClInclude Include="GameObject\MeshObject\MeshObjectChipManager.h">
       <Filter>GameObject\MeshObject</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\BossGolem.h">
+      <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\HFSM\GhostPairAttackState.h">
+      <Filter>GameObject\Enemy\HFSN</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
