--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -347,6 +347,9 @@
     <ClCompile Include="GameObject\Enemy\BossGolem.cpp">
       <Filter>GameObject\Enemy\BossGolem</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\CodeNameD.cpp">
+      <Filter>GameObject\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -711,6 +714,9 @@
     <ClInclude Include="GameObject\Enemy\HFSM\GhostPairAttackState.h" />
     <ClInclude Include="GameObject\Enemy\BossGolem.h">
       <Filter>GameObject\Enemy\BossGolem</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\CodeNameD.h">
+      <Filter>GameObject\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
