[update]村に入った時に村の名前を表示する機能を追加。

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -326,6 +326,7 @@
     <ClInclude Include="GameObject\Village\Shop\HFSM\ShopS_Select.h" />
     <ClInclude Include="GameObject\Village\Shop\Shop.h" />
     <ClInclude Include="GameObject\Village\TextBox.h" />
+    <ClInclude Include="GameObject\Village\VillageName.h" />
     <ClInclude Include="GameSystem.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Scene\GameScene.h" />
@@ -450,6 +451,7 @@
     <ClCompile Include="GameObject\Village\Shop\HFSM\ShopS_Select.cpp" />
     <ClCompile Include="GameObject\Village\Shop\Shop.cpp" />
     <ClCompile Include="GameObject\Village\TextBox.cpp" />
+    <ClCompile Include="GameObject\Village\VillageName.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
     <ClCompile Include="Scene\LastBossTestScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
