--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -350,6 +350,10 @@
     <ClCompile Include="GameObject\Enemy\CodeNameD.cpp">
       <Filter>GameObject\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\Enemy\HFSM\EnemyBackStepState.cpp" />
+    <ClCompile Include="GameObject\Village\VillageName.cpp">
+      <Filter>GameObject\Village</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -717,6 +721,10 @@
     </ClInclude>
     <ClInclude Include="GameObject\Enemy\CodeNameD.h">
       <Filter>GameObject\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject\Enemy\HFSM\EnemyBackStepState.h" />
+    <ClInclude Include="GameObject\Village\VillageName.h">
+      <Filter>GameObject\Village</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
