--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -331,6 +331,7 @@
     <ClInclude Include="GameSystem.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SaveData\SaveDataManager.h" />
+    <ClInclude Include="Scene\EndingScene.h" />
     <ClInclude Include="Scene\GameScene.h" />
     <ClInclude Include="Scene\LastBossTestScene.h" />
     <ClInclude Include="Scene\TitleScene.h" />
@@ -456,6 +457,7 @@
     <ClCompile Include="GameObject\Village\TextBox.cpp" />
     <ClCompile Include="GameObject\Village\VillageName.cpp" />
     <ClCompile Include="SaveData\SaveDataManager.cpp" />
+    <ClCompile Include="Scene\EndingScene.cpp" />
     <ClCompile Include="Scene\GameScene.cpp" />
     <ClCompile Include="Scene\LastBossTestScene.cpp" />
     <ClCompile Include="Scene\TitleScene.cpp" />
