空間分割で、二つの空間に含まれるオブジェクトが想定外の挙動をする不具合を修正 魔王城用の局所空間分割を設定

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -336,6 +336,7 @@
     <ClInclude Include="Scene\LastBossTestScene.h" />
     <ClInclude Include="Scene\TitleScene.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="SupportData.h" />
     <ClInclude Include="_Debug\TestObject.h" />
   </ItemGroup>
   <ItemGroup>
