--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -755,6 +755,7 @@
     <ClInclude Include="GameObject\Enemy\HFSM\EnemyBackStepState.h">
       <Filter>GameObject\Enemy\HFSN</Filter>
     </ClInclude>
+    <ClInclude Include="SupportData.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Decide.rc" />
