--- a/game/Decide/Decide/Decide.vcxproj.filters
+++ b/game/Decide/Decide/Decide.vcxproj.filters
@@ -370,6 +370,9 @@
     <ClCompile Include="GameObject\Enemy\BreathObject.cpp">
       <Filter>GameObject\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject\UI\PlayerParameterUI.cpp">
+      <Filter>GameObject\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Decide.h" />
@@ -855,5 +858,13 @@
     <Filter Include="SaveData">
       <UniqueIdentifier>{1a4a70f4-e157-45f3-aedd-3b7302ce87c6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameObject\UI">
+      <UniqueIdentifier>{1e5c36d5-e117-4942-8ee7-edf40341fe72}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="GameObject\UI\PlayerParameterUI.h">
+      <Filter>GameObject\UI</Filter>
+    </Text>
   </ItemGroup>
 </Project>
