ウィンドウの名前を「D」から「Re History」に変更。

--- a/game/Decide/Decide/Decide.vcxproj
+++ b/game/Decide/Decide/Decide.vcxproj
@@ -483,6 +483,7 @@
     <ResourceCompile Include="Decide.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="cursor.ico" />
     <Image Include="Decide.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
